Implement backend for roles management
